# multi-core

./: README.md
cuda/0_basic_api/: CMakeLists.txt  device_memory.cu
cuda/1_Assign_Vector_MatrixSum/Assign_1_2_MatrixAddition/: CMakeLists.txt  MatrixAddition.cu  Tid_index.h
cuda/1_CheckDim/: CMakeLists.txt  CheckDim.cu
cuda/1_VectorSum/: VectorSum.cu
cuda/2_Assign_MatrixMultiplication/: MatrixMultiplication.cu
cuda/2_sharedMemory/: CMakeLists.txt  MatrixMultiplication.cu
cuda/3_Assign_sharedMemory/: MatrixMultiplication.cu
cuda/4_Synchronization/: CMakeLists.txt  ThreadCounting.cu
cuda/Assign_1_2_MatrixAddition/: MatrixAddition.cu  Tid_index.h
cuda/Assign_1_VectorSum/: CMakeLists.txt  VectorSum.cu
cuda/CudaDeviceProp/: CMakeLists.txt  cudaDeviceProp.cu  helper_cuda.h  helper_string.h
cuda/hello_cuda/: CMakeLists.txt  hello_cuda.cu
openMP/3d_collision_detection/: CMakeLists.txt  out
openMP/3d_collision_detection/include/core/: Object3D.h
openMP/3d_collision_detection/include/geometry/: AABB.h  BoundingVolume.h  ConvexHull.h
openMP/3d_collision_detection/include/math/: Matrix3x3.h  Quaternion.h  Vector3.h
openMP/3d_collision_detection/src/: main.cpp
openMP/3d_collision_detection/src/geometry/: AABB.cpp
openMP/3d_collision_detection/src/math/: Vector3.cpp
openMP/Assign_1/Lab1-2/: main.cpp
openMP/Assign_3(Histogram)/: test_results.csv
openMP/Histogram(Assign. 3)/: histogram  histogram.cpp  test.sh  visualization.py
openMP/Lab1/: first.c
openMP/Lab1/Lab1-2/Utility Programs/: Viewer.exe:Zone.Identifier
openMP/Lab2/: NowaitClause.cpp  SectionsConstruct  SectionsConstruct.cpp  SingleConstruct.cpp  example  loop_construct  loop_construct.cpp
openMP/Lab3/: MasterSlave.cpp  out  shared_private_ex.cpp
openMP/Matrix_Trapezoidal rule(Assign. 2)/: Lab2-2  Makefile  lab1.cpp  lab2.cpp
openMP/NestedParallelism/: Nested_parallel  Nested_parallel.cpp
openMP/ParallelConstructs/Ex0_basicOmp/: basic  basic.cpp
openMP/ParallelConstructs/Ex1_VectorSum/: Makefile  VectorSum  VectorSum.cpp
openMP/Project/: SSurge_15305_16098_003_161114_L090HHHH_CX_01.mlc:Zone.Identifier  apple_fft.py  sar.py  test.py
openMP/Reduction/Ex16_GlobalSumReduction/: globalsum_reduction  globalsum_reduction.cpp  globalsum_reduction2  globalsum_reduction2.cpp
openMP/Reduction/Ex17_Reduction/: Trapezoidal  global_sum  global_sum.cpp
openMP/Scheduling/Ex13_Static/: static  static.cpp
openMP/Scheduling/Ex14_Dynamic/: dynamic  dynamic.cpp
openMP/Scheduling/Ex15_Guided/: guided  guided.cpp
openMP/ScopeOfVariables/Ex6_Shared-Private/: shared_private_ex  shared_private_ex.cpp
openMP/ScopeOfVariables/Ex7_Firstprivate-Lastprivate/: firstprivate_lastpirvate  firstprivate_lastprivate.cpp
openMP/Synchronization/Ex10_Critical&Atomic/: Makefile  main.cpp
openMP/Synchronization/Ex11_Master/: master  master.cpp
openMP/Synchronization/Ex12_Lock/: Lock_TaskOrder  Lock_shared_data  Lock_shared_data.cpp
openMP/Synchronization/Ex8_Barrier/: Barrier  Barrier.cpp
openMP/Synchronization/Ex9_MasterSlave/: MasterSlave  MasterSlave.cpp
openMP/WorkSharingConstructs/Ex2_LoopConstruct/: loop_construct.cpp
openMP/WorkSharingConstructs/Ex4_SingleConstruct/: SingleConstruct
openMP/WorkSharingConstructs/Ex5_NowaitClause/: NowaitClause
openMP/assignment2/: Lab2-1  Makefile  main.cpp  main2.cpp
